Color Contrast Accessibility Fixes Fixes AB#467: Contrast on InfoBox background Fixes AB#434: Low Priority text contrast issues Fixes AB#437: Account name suffix luminosity contrast issue

--- a/src/app/styles/base/forms.scss
+++ b/src/app/styles/base/forms.scss
@@ -71,14 +71,13 @@ fieldset {
     flex-flow: row nowrap;
     padding: 0;
     border: 1px solid #aaa;
-    background-color: $secondary-text;
+    background-color: $main-background;
     margin-top: 16px;
 
     .infobox-image {
         width: 45px;
         height: 45px;
         padding: 10px;
-        background-color: $main-background;
 
         i {
             color: $primary-color;
